# KorppiLibros

./: app.js  index.html
css/: styles.css
img/Logo/: Logo.psd  White-Logo.psd
korppi_api/: .env  compose.yaml  mongo-init.js  pyproject.toml  requirements.txt  vercel.json
korppi_api/korppi_api/: korppi.py
